# pdfdl

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
pdfdl/: cli.py
